# videos-translator

./: README.md  README_zh-CN.md  package.oo.yaml  pyproject.toml  requirements.txt
flows/dir-videos-translater/: .flow.ui.oo.json  flow.oo.yaml
flows/one-video-translater/: .flow.ui.oo.json  flow.oo.yaml
flows/translater/: .flow.ui.oo.json  flow.oo.yaml
flows/translater/scriptlets/: +python#1.py  +python#3.py
flows/translator/: .flow.ui.oo.json  flow.oo.yaml
flows/translator-test/: .flow.ui.oo.json  flow.oo.yaml
oo-locales/: en.json  zh-CN.json
shared/translation/: __init__.py  group.py  llm.py  nlp.py  translater.py
slotflows/+slotflow#1/: .slotflow.ui.oo.json  slotflow.oo.yaml
slotflows/+slotflow#1/scriptlets/: +scriptlet#1.ts
subflows/translator/: .subflow.ui.oo.json  subflow.oo.yaml
subflows/translator/scriptlets/: +python#2.py
subflows/video-translater/: .subflow.ui.oo.json  subflow.oo.yaml
subflows/videos-translater/: .subflow.ui.oo.json  subflow.oo.yaml
tasks/translate-texts-list/: llm_parser.py  main.py  task.oo.yaml
tasks/translater/: task.oo.yaml
tasks/video-filter/: main.ts  task.oo.yaml
