[project]
name = "videos-translater"
version = "0.1.0"
description = ""
authors = [
    {name = "TaoZeyu",email = "i@taozeyu.com"}
]
readme = "README.md"
requires-python = ">=3.10,<3.13"
dependencies = [
    "tiktoken (==0.8.0)",
    "langid (==1.1.6)",
    "spacy (==3.8.3)",
    "resource-segmentation (==0.0.1)",
    "langchain-core (==0.3.25)",
    "langchain-community (==0.3.12)",
    "langchain-openai (==0.2.12)",
    "langchain-anthropic (==0.3.0)",
    "langchain-google-vertexai (==2.0.9)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
